--- a/charts/microservices/values/frontend.yaml
+++ b/charts/microservices/values/frontend.yaml
@@ -23,9 +23,10 @@ containerEnv:
   - name: AD_SERVICE_ADDR
     value: "adservice:9555"
 image:
-  repository: microservicesb.azurecr.io/frontend
+  repository: gcr.io/google-samples/microservices-demo/frontend
+  #microservicesb.azurecr.io/frontend
   pullPolicy: IfNotPresent
-  #tag: "v0.2.3"
+  tag: "v0.2.3"
 
 HealthCheck: True
 
