--- a/charts/microservices/values/productcatalogservice.yaml
+++ b/charts/microservices/values/productcatalogservice.yaml
@@ -11,10 +11,9 @@ containerEnv:
     value: "1"
 
 image:
-  repository: gcr.io/google-samples/microservices-demo/productcatalogservice
-  #microservicesb.azurecr.io/productcatalogservice
+  repository: microservicesb.azurecr.io/productcatalogservice
   pullPolicy: IfNotPresent
-  tag: "v0.6.0"
+  tag: "1.1.1"
 
 HealthCheck: True
 
