--- a/charts/microservices/values/emailservice.yaml
+++ b/charts/microservices/values/emailservice.yaml
@@ -11,10 +11,9 @@ containerEnv:
     value: 1
 
 image:
-  repository: gcr.io/google-samples/microservices-demo/emailservice
-  #microservicesb.azurecr.io/emailservice
+  repository: microservicesb.azurecr.io/emailservice
   pullPolicy: IfNotPresent
-  tag: "v0.6.0"
+  tag: "1.1.1"
 
 HealthCheck: True
 
