--- a/charts/microservices/values/shippingservice.yaml
+++ b/charts/microservices/values/shippingservice.yaml
@@ -11,10 +11,9 @@ containerEnv:
     value: "1"
 
 image:
-  repository: gcr.io/google-samples/microservices-demo/shippingservice
-  #microservicesb.azurecr.io/shippingservice
+  repository: microservicesb.azurecr.io/shippingservice
   pullPolicy: IfNotPresent
-  tag: "v0.6.0"
+  tag: "1.1.1"
 
 HealthCheck: True
 # readinessProbe:
