finish build and push of emailservice

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ config.yaml
 */.terraform/*
 ProvisionK8S/.terraform.lock.hcl
 Jenkins/ProvisionVM/.terraform*
+Jenkins/ProvisionVM/terraform*
 Rancher/rancher_data
