fix ansible playbook issues

--- a/Jenkins/Ansible/inventory.ini
+++ b/Jenkins/Ansible/inventory.ini
@@ -1,6 +1,6 @@
 [servers]
-*ip-adresse*
+<ip-address>
 
 [servers:vars]
-ansible_userneame = admin
+ansible_userneame = username
 ansible_password = password
