--- a/Jenkins/Ansible/playbook.yml
+++ b/Jenkins/Ansible/playbook.yml
@@ -1,9 +1,10 @@
 - hosts: servers
   become: true
-
   roles:
-    - role: java
-    - role: jenkins_ci
+    - role: geerlingguy.java
+    - role: geerlingguy.jenkins
       vars:
         - jenkins_admin_username: admin
-        - jenkins_admin_password: admin
+        - jenkins_admin_password: admin@1234
+        - jenkins_repo_key_url: "https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key"
+        - jenkins_repo_url: "deb [signed-by=/etc/apt/trusted.gpg.d/jenkins.asc] https://pkg.jenkins.io/debian binary/"
