--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 secret.txt
 ArgoCD/private-sshkey-secret.yaml
 config.yaml
-*/.terraform/*
-ProvisionK8S/.terraform.lock.hcl
-Jenkins/ProvisionVM/.terraform*
-Jenkins/ProvisionVM/terraform*
 Rancher/rancher_data
-Rancher/RancherClusterProvisioning/.terraform*
-Rancher/RancherClusterProvisioning/terraform.tfstate*
+
+
+**/.terraform/*
+**/*.tfstate
+*.tfstate.*
+*.terraform.lock.hcl*
